[package]
name = "transact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2.0.4"
